--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@angular/cli": "~13.1.0",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/language-service": "~13.1.0",
+    "@nguniversal/builders": "^13.0.1",
+    "@nguniversal/express-engine": "^13.0.1",
     "@nrwl/cli": "13.4.3",
     "@nrwl/cypress": "13.4.3",
     "@nrwl/eslint-plugin-nx": "13.4.3",
